# macro-pulse

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
docs/plans/: 2026-04-23-macropulse-spx.md
src/macropulse/: __main__.py  alerter.py  config.py  dedup.py  logging.py  models.py  runner.py  signal.py
src/macropulse/providers/: base.py  nitter.py  replay.py  truthsocial.py
tests/: conftest.py  test_alerter.py  test_config.py  test_dedup.py  test_logging.py  test_models.py  test_providers_nitter.py  test_providers_replay.py  test_providers_truthsocial.py  test_runner_e2e.py  test_signal.py
tests/fixtures/: april_23_2026_post.json  nitter_rss.xml  truthsocial_account_lookup.json  truthsocial_statuses.json
